# XXTest

./: CMakeLists.txt  README.md
CMakePrj/: ConfigParse.cmake  source.txt.bak
XXTest/: autotest.xml
XXTest/CMakePrj/: README.md  prjconfig.txt  prjconfig.txt.bak  source.txt
XXTest/frame/: MainPage.xaml.cpp  MainPage.xaml.h  fxqa_argparser.cpp  fxqa_charset.h  fxqa_config.h  fxqa_define.h  fxqa_dylibmanager.cpp  fxqa_qtmainwindow.cpp  fxqa_qtmainwindow.h  fxqa_statussender.cpp  fxqa_statussender.h  fxqa_test.cpp  fxqa_test.h  fxqa_testfiles.cpp  fxqa_testfiles.h  fxqa_testlog.cpp  fxqa_testlog.h  fxqa_testmanager - 副本.h  fxqa_testmanager.h  fxqa_xmlparser.cpp
XXTest/test/: demo.cpp  demo.h  demo_test.cpp  demo_test.h
frame/: App.xaml.cpp  MainPage.xaml  Package.appxmanifest  cxxopts.hpp.bak  fxqa_argparser.h  fxqa_charset.cpp  fxqa_common.cpp  fxqa_common.h  fxqa_dylibmanager.h  fxqa_qtmainwindow.cpp  fxqa_testinfo.cpp  fxqa_testinfo.h  fxqa_testmemory.cpp  fxqa_testmemory.h  fxqa_xmlparser.h  fxqa_xmlwriter.cpp  fxqa_xmlwriter.h
test/: main.cpp
